_scss/project-content.scss
#project-content {
	.project-streamfield {
		margin: $xl-space auto;
		&:first-child {
			margin-top: 0px;
		}
		&:last-child {
			margin-bottom: $l-space;
		}
	}
}
@media only screen and (max-width:$m-breakpoint) {
	#project-content {
		.project-streamfield {
			margin: $l-space auto;
		}
	}
}
/*********BIG IMAGE STREAMFIELD*********/
.bigimage-streamfield {
	.image-bleed {
		height:90vh;
		max-height:850px;
	}
}
@media only screen and (max-width:$m-breakpoint) {
	.bigimage-streamfield {
		.image-bleed {
			height:300px;
		}
	}
}
/*********CONTENT STREAMFIELD*********/
.content-streamfield {
	.content-wrapper {
		max-width:800px;
		width: 100%;
		margin:0 auto;
	}
}
/*********SCREENS STREAMFIELD*********/
.screens-streamfield {
	overflow-x: hidden;
	.flex-container {
		margin-top:$r-space;
		margin-bottom:$r-space;
	}
	.desktop-screen {
		height: 640px;
		border-radius: $border-radius;
		@include shadow(rgba(0,0,0,0.12));
		img {
			position:relative;
			object-position: top;
		}
		&.center-screen {
			@include scale(1.18);
			margin-top: 5px;
			z-index: 1;
		}
	}
}
@media only screen and (max-width:$l-breakpoint) {
	.screens-streamfield {
		.desktop-screen {
			height: 480px;
			border-radius: $border-radius-s;
		}
	}
}
@media only screen and (max-width:$m-breakpoint) {
	.screens-streamfield {
		.flex-container {
			width:600px;
			min-width:600px;
			left:50%;
			margin-left:-300px;
		}
		.desktop-screen {
			height: 300px;
			border-radius: $border-radius-xs;
		}
	}
	// .screens-streamfield {
	// 	img {
	// 		width:auto;
	// 		height: 350px;
	// 		position:absolute;
	// 	  	left: 50%;
	// 	  	transform: translateX(-50%);
	// 	}
	// }
}
/*********APP STREAMFIELD*********/
.app-streamfield {
	.app-image {
		width: calc(25% - 37.5px);
		img {
			border-radius: $border-radius;
			width:100%;
			@include shadow(rgba(0,0,0,0.12));
		}
	}
}
.desktopapp-streamfield {
	flex-wrap: wrap;
	.desktopapp-image {
		width: calc(50% - 25px);
		img {
			border-radius: $border-radius;
			width:100%;
			@include shadow(rgba(0,0,0,0.12));
			margin-bottom:50px;
		}
		&:nth-child(5) {
			img {
				margin-bottom:0px;
			}
		}
		&:nth-child(6) {
			img {
				margin-bottom:0px;
			}
		}
	}
}
@media only screen and (max-width:$m-breakpoint) {
	.app-streamfield {
	  	flex-wrap: wrap;
		.app-image {
			width: calc(50% - 10px);
			&:nth-child(1) {
				padding-bottom:20px;
			}
			&:nth-child(2) {
				padding-bottom:20px;
			}
		}
	}
	.desktopapp-streamfield {
		.desktopapp-image {
			width: 100%;
			img {
				margin-bottom:$r-space;
			}
			&:nth-child(5) {
				img {
					margin-bottom:$r-space;
				}
			}
			&:nth-child(6) {
				img {
					margin-bottom:$r-space;
				}
			}
		}
	}
}

